--- a/Siamese_Object_recognize.ipynb
+++ b/Siamese_Object_recognize.ipynb
@@ -2,8 +2,136 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "21f3fcd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import torchvision\n",
+    "import torchvision.datasets as dset\n",
+    "import torchvision.transforms as transforms\n",
+    "from torch.utils.data import DataLoader,Dataset\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torchvision.utils\n",
+    "import numpy as np\n",
+    "import random\n",
+    "from PIL import Image\n",
+    "import torch\n",
+    "from torch.autograd import Variable\n",
+    "import PIL.ImageOps    \n",
+    "import torch.nn as nn\n",
+    "from torch import optim\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1ab20e7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def imshow(img,text=None,should_save=False):\n",
+    "    npimg = img.numpy()\n",
+    "    plt.axis(\"off\")\n",
+    "    if text:\n",
+    "        plt.text(75, 8, text, style='italic',fontweight='bold',\n",
+    "            bbox={'facecolor':'white', 'alpha':0.8, 'pad':10})\n",
+    "    plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
+    "    plt.show()    \n",
+    "\n",
+    "def show_plot(iteration,loss):\n",
+    "    plt.plot(iteration,loss)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2c7bb87d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/walter/miniconda3/envs/siamese/lib/python3.11/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/home/walter/miniconda3/envs/siamese/lib/python3.11/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torchvision.models as models\n",
+    "\n",
+    "backbone = \"resnet50\"  # Replace with the desired model architecture\n",
+    "model = models.__dict__[backbone](pretrained=True, progress=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8e51c83f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 3, 58, 68])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_path = \"/home/walter/git/Siamese_object_recognition/data/0/0_100_00_0000.jpg\"\n",
+    "img = Image.open(img_path)\n",
+    "transform = transforms.ToTensor()\n",
+    "tensor_image = transform(img)\n",
+    "tensor_image = torch.unsqueeze(tensor_image, dim=0)\n",
+    "tensor_image.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bc6475ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 1000])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = model(tensor_image)\n",
+    "output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "76973cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e0c7a02",
    "metadata": {},
    "outputs": [],
    "source": []
